--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chosen-readonly",
-  "version": "0.9.0",
+  "version": "1.0.1",
   "description": "Readonly support for Chosen selects",
   "main": "dist/chosen-readonly.js",
   "directories": {
@@ -25,11 +25,13 @@
   },
   "homepage": "https://github.com/westonganger/chosen-readonly",
   "dependencies": {
-    "jquery": ">=1.0"
+    "jquery": ">=1.0",
+    "chosen-npm": ">=1.0"
   },
   "devDependencies": {
     "gulp": "*",
     "gulp-uglify": "*",
+    "pump": "*",
     "gulp-release-it": "~1"
   }
 }
