--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "chosen-readonly",
   "version": "1.0.2",
   "description": "Readonly support for Chosen selects",
-  "main": "dist/chosen-readonly.js",
+  "main": "dist/chosen-readonly.min.js",
   "directories": {
     "test": "test"
   },
